--- a/jooj.html
+++ b/jooj.html
@@ -1,4 +1,5 @@
 <html>
+  
 javascript:alert("jooj")
 javascript:alert("jooj")
 javascript:alert("jooj")
@@ -6,9 +7,8 @@ javascript:alert("jooj")
 javascript:alert("jooj")
 javascript:alert("jooj")
 javascript:alert("jooj")
-<img id="image" src="https://steamusercontent-a.akamaihd.net/ugc/103981389991882458/FE2EA927BD955626BEF3DE8A7A29EAB7CEDF6B2E/"/>
-
-html {
+  
+<img id="image" src="https://steamusercontent-a.akamaihd.net/ugc/103981389991882458/FE2EA927BD955626BEF3DE8A7A29EAB7CEDF6B2E/"
   /* Set up the background  */
   background-color: #023E54; 
   background-image: url(https://steamusercontent-a.akamaihd.net/ugc/103981389991882458/FE2EA927BD955626BEF3DE8A7A29EAB7CEDF6B2E/); 
