--- a/jooj.html
+++ b/jooj.html
@@ -24,5 +24,5 @@ javascript:alert("jooj")
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1; /* Makes sure this is underneath other HTML elements (on my site, it's behind a login form  */
+  z-index: -1; //
 }
