--- a/jooj.html
+++ b/jooj.html
@@ -85,8 +85,8 @@ javascript:alert("jooj")
     </head>
     <body>
         
-        <img src="https://steamusercontent-a.akamaihd.net/ugc/103981389991882458/FE2EA927BD955626BEF3DE8A7A29EAB7CEDF6B2E/" alt="Google" title="Google" class="testClass" id="test1" />
-        <div id="test1_box" class="Box">This is googles test box</a></div>
+        <img src="https://steamusercontent-a.akamaihd.net/ugc/103981389991882458/FE2EA927BD955626BEF3DE8A7A29EAB7CEDF6B2E/" alt="jooj" title="jooj" class="testClass" id="test1" />
+        <div id="test1_box" class="Box">jooj</a></div>
         <br /><br />
         <a href="#" class="testClass" id="test2">This is a test</a>
         <div id="test2_box" class="Box">Text based</a></div>
